--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,10 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.2.0'
     testCompile 'junit:junit:4.12'
     compile 'junit:junit:4.12'
+    compile 'com.google.zxing:core:3.2.1'
+    compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+    compile 'me.dm7.barcodescanner:zxing:1.9'
+    compile 'com.github.nisrulz:qreader:2.0.0'//start from 1.0.4 version
+
+    compile 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
