--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     defaultConfig {
         applicationId "com.example.root.meeransunday"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 19
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -35,7 +35,7 @@ dependencies {
     compile 'com.google.zxing:core:3.2.1'
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     compile 'me.dm7.barcodescanner:zxing:1.9'
-    compile 'com.github.nisrulz:qreader:2.0.0'//start from 1.0.4 version
-
+    compile 'com.github.nisrulz:qreader:2.0.0'
+    //start from 1.0.4 version
     compile 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
