--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,11 +27,17 @@
             android:xlargeScreens="true"
             android:anyDensity="true"
             android:resizeable="true"/>
+
     </application>
     <activity android:name="meeranSunday"
         android:configChanges="orientation|keyboardHidden"
         />
     <uses-permission android:name="android.permission.SEND_SMS" />
-    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+    <uses-permission android:name="android.permission.CAMERA">
+
+    </uses-permission>
+
     <uses-feature android:name="android.hardware.camera.autofocus" />
+
+    <uses-feature android:name="android.hardware.camera" />
 </manifest>
